# podatek_od_nieruchomosci

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
book/: _config.yml  _toc.yml  intro.md
book/notebooks/: szczecin_2015_2024.ipynb
book/public_info_requests/: 001_Szczecin_2015_2024.FAILED.md  002_Szczecin_2015_2024.md  003_Warszawa_2015_2024.md
data/: Warszawa_2020_2024.csv
data/Szczecin_2015_2024/: Liczba_podatnikow_os_fiz_o_pow_100_200m2.csv  Liczba_podatnikow_os_fiz_o_pow_200_500m2.csv  Liczba_podatnikow_os_fiz_o_pow_500_2000m2.csv  Liczba_podatnikow_os_fiz_o_pow_50_100m2.csv  Liczba_podatnikow_os_fiz_o_pow_od_2000m2.csv  Liczba_podatnikow_os_fiz_o_pow_pon_50m2.csv  Powierzchnia_opodatk_os_fiz_przedzial_o_pow_100_200m2.csv  Powierzchnia_opodatk_os_fiz_przedzial_o_pow_200_500m2.csv  Powierzchnia_opodatk_os_fiz_przedzial_o_pow_500_2000m2.csv  Powierzchnia_opodatk_os_fiz_przedzial_o_pow_50_100m2.csv  Powierzchnia_opodatk_os_fiz_przedzial_o_pow_od_2000m2.csv  Powierzchnia_opodatk_os_fiz_przedzial_o_pow_pon_50m2.csv  Suma_liczba_podatników_osoby_fizyczne.csv  Suma_liczba_podatników_osoby_prawne.csv  Suma_powierzchnia_opodatkowana_osoby_fizyczne.csv  Suma_powierzchnia_opodatkowana_osoby_prawne.csv
lib/: data.py  szczecin_2015_2024.py
notebooks/: szczecin_2015_2024.ipynb
public_info_requests/: 001_Szczecin_2015_2024.FAILED.md  002_Szczecin_2015_2024.md  003_Warszawa_2015_2024.md
