[tool.poetry]
name = "podatek_od_nieruchomosci"
version = "0.1.0"
description = ""
authors = []
packages = [{include = 'lib'}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "*"
matplotlib = "*"
jupyter-book = "^1.0.4.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"